add category migration,seeder,crud and test
