# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\api\v1\AdminUserController;
 use App\Http\Controllers\api\v1\BrandController;
+use App\Http\Controllers\api\v1\CategoryController;
 use App\Http\Controllers\api\v1\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -36,6 +37,10 @@ Route::prefix('v1')->group(function () {
       //Brand
     Route::get('brands', [BrandController::class, 'index']);
     Route::get('brand/{uuid}', [BrandController::class, 'show']);
+
+    //category
+    Route::get('categories', [CategoryController::class, 'index']);
+    Route::get('category/{uuid}', [CategoryController::class, 'show']);
  
 
     Route::middleware(['admin.side'])->group(function () {
@@ -53,6 +58,10 @@ Route::prefix('v1')->group(function () {
         Route::post('brand/create', [BrandController::class, 'create']);
         Route::match(['put', 'patch'], 'brand/{uuid}', [BrandController::class, 'edit']);
         Route::delete('brand/{uuid}', [BrandController::class, 'delete']);
+        Route::delete('category/{uuid}', [CategoryController::class, 'delete']);
+
+        Route::post('category/create', [CategoryController::class, 'create']);
+        Route::match(['put', 'patch'], 'category/{uuid}', [CategoryController::class, 'edit']);
         Route::delete('category/{uuid}', [CategoryController::class, 'delete']);
     });
 });
